# image_annotations

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/PaddleOCR-json/models/container_det/: inference.pdiparams  inference.pdiparams.info
src-tauri/PaddleOCR-json/models/container_rec/: inference.pdiparams  inference.pdiparams.info  inference.pdmodel
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  mian1.rs
src/function/: index.ts
src/store/: index.ts
