[package]
name = "tauri_image_annotations"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0-beta.6"
tauri-plugin-autostart = "2.0.0-beta.4"
tauri-plugin-dialog = "2.0.0-beta.6"
tauri-plugin-single-instance = "2.0.0-beta.6"
tauri-plugin-http = "2.0.0-beta.6"
image = "0.25.1"
paddleocr = "0.4.1"

 