[package]
name = "image_annotations"
version = "0.1.0"
description = "image_annotations"
authors = ["angelbests"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.3"
tauri-plugin-autostart = "2.0.1"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-single-instance = "2.0.1"
tauri-plugin-http = "2.0.3"
image = "0.25.1"
paddleocr = "0.4.1"

 